--- a/back-end/front-end/src/pages/login/Login.css
+++ b/back-end/front-end/src/pages/login/Login.css
@@ -1,112 +1,80 @@
-
 body {
-    font-family: 'Montserrat', sans-serif;
-  }
-  
-  .container {
-    display: flex;
-    flex-direction: row;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 60em;
-    height: 20em;
-    position: fixed;
-  }
-  
-  .container div {
-    width: 100%;
-  }
-  
-  .logo img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-  }
-  
-  .login {
-    display: flex;
-    width: 25%;
-  }
-  
-  .login_child {
-    width: 100%;
-    margin: 0 70px;
-  }
-  
-  .login input {
-    line-height: 35px;
-    width: 100%;
-    background-color: #EFEFF4;
-    border-style: ridge;
-    border-color: #576A3D;
-    border-width: thin;
-    font-size: 16px;
-    outline: none;
-  }
-  
-  .login button {
-    text-align: center;
-    line-height: 28px;
-    width: 50%;
-    background-color: #8DB33A;
-    color: white;
-    border: none;
-    margin: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 28px;
-  }
-  
-  .login p {
-    color: #576A3D;
-    cursor: pointer;
-  }
-  
-  .texto_correo {
-    text-align: left;
-  }
-  
-  .footer {
-    width: 100%;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-  }
-  
-  .footer div {
-    width: 100%;
-  }
-  
-  .footer footer {
-    background-color: #EC8A01;
-    padding: 10px;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 14px;
-  }
-  
-  .footer p {
-    margin: 0;
-    color: white;
-  }
-  
-  .facultad {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    padding-right: 20px;
-  }
-  
-  .facultad p {
-    padding-right: 10px;
-    line-height: 2.5;
-  }
-  
-  .facultad img {
-    height: 35px;
-  }
-  
+  font-family: 'Montserrat', sans-serif;
+}
+
+
+.container div {
+  width: 100%;
+  justify-content: center;
+  border-color: black;
+}
+
+.logo img {
+  width: 80%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.login_child {
+  width: 100%;
+  margin: 0 70px;
+}
+
+.login input {
+  line-height: 35px;
+  width: 100%;
+  background-color: #EFEFF4;
+  border-style: ridge;
+  border-color: #576A3D;
+  border-width: thin;
+  font-size: 16px;
+  outline: none;
+}
+
+.login button {
+  text-align: center;
+  line-height: 28px;
+  width: 50%;
+  background-color: #8DB33A;
+  color: white;
+  border: none;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 28px;
+}
+
+.login p {
+  color: #576A3D;
+  cursor: pointer;
+}
+
+.texto_correo {
+  text-align: left;
+}
+
+.todo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90vh;
+}
+
+
+.container {
+  display: flex;
+  flex-direction: row;
+}
+
+.login {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: 400px;
+  padding: 20px;
+  background-color: #fff;
+}
+
