--- a/back-end/front-end/src/pages/login/ventanas/recuperar contrasena3/Recuperar3.css
+++ b/back-end/front-end/src/pages/login/ventanas/recuperar contrasena3/Recuperar3.css
@@ -1,7 +1,11 @@
-.modal_recuperar2 {
+.ant-modal-content {
+    border-radius: 0;
+  }
+
+.modal_recuperar3 {
     font-family: 'Montserrat', sans-serif;
     color: #576A3D;
-}   
+}
 
 :where(.css-dev-only-do-not-override-1e3x2xa).ant-modal .ant-modal-title {
     margin: 0;
@@ -35,21 +39,35 @@
     border-radius: 0;
 }
 
-.input {
-    border-radius: 0;
-    line-height: 30px;
-    width: 70%;
-    background-color: #EFEFF4;
-    border-style: ridge;
-    border-color: #576A3D;
-    border-width: thin;
-    font-size: 16px;
-    outline: none;
-    margin: auto;
-    display: grid;
-}
-
 .text {
     justify-content: center;
     color: #576A3D;
+}
+
+.div_input {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.input1 {
+    border-color: #576A3D;
+    border-width: thin;
+    font-size: 16px;
+    line-height: 30px;
+    width: 70%;
+    outline: none;
+    margin-bottom: 5%;
+    border-radius: 0;
+}
+
+.input2 {
+    border-color: #576A3D;
+    border-width: thin;
+    font-size: 16px;
+    line-height: 30px;
+    width: 70%;
+    outline: none;
+    border-radius: 0;
 }
