--- a/back-end/front-end/src/pages/pie_de_pagina/Footer.css
+++ b/back-end/front-end/src/pages/pie_de_pagina/Footer.css
@@ -1,7 +1,7 @@
   footer {
     display: flex;
     justify-content: space-between;
-    background-color: #EC8A01;
+    background-color: #ec8a01;
     padding: 10px;
     width: 100%;
     align-items: center;
