Muchos muchos cambios

--- a/back-end/front-end/src/pages/login/ventanas/recuperar contrasena3/Recuperar3.css
+++ b/back-end/front-end/src/pages/login/ventanas/recuperar contrasena3/Recuperar3.css
@@ -44,6 +44,12 @@
     color: #576A3D;
 }
 
+.text2 {
+    justify-content: space-between;
+    color: #576A3D;
+    font-weight: bold;
+}
+
 .div_input {
     display: flex;
     flex-direction: column;
